--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,7 +11,7 @@ body {
     background: rgb(255, 255, 255);
 }
 
-.common-text{
+.common-text {
     color: rgba(19, 19, 24, 0.7);
     font-size: 1rem;
     font-weight: 400;
@@ -121,7 +121,7 @@ body {
     border-radius: 5px;
     padding: 8px 14px;
     border: 0px;
-    margin-top: 10px;
+    margin-top: 20px;
     font-size: 1.25rem;
     font-weight: 800;
 }
@@ -155,31 +155,114 @@ body {
     font-weight: 800;
 }
 
-.common-text{
+.common-text {
     padding-top: 20px;
 }
 
 /* card-container-styles */
-.card-container{
+.card-container {
     max-width: 1100px;
     margin: 0 auto;
     margin-top: 30px;
-    background: rgba(19, 19, 24, 0.2),url(4);
- 
+    background: rgba(19, 19, 24, 0.2), url(4);
+
 }
 
-.card-container img{
+.card-container img {
     width: 100%;
     height: 100%;
     border-radius: 16px;
 }
-.row{
+
+.row {
     display: flex;
     gap: 20px;
     margin: 20px;
 }
 
-.row > div{
+.row>div {
     flex: 1;
 }
 
+/* gallery-styles */
+.gallery-section {
+    max-width: 1100px;
+    margin: 0 auto;
+    margin-top: 50px;
+}
+
+.gallery-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.single-gallery {
+    flex-basis: 520px;
+    background-color: rgba(251, 181, 99, 0.05);
+    box-sizing: border-box;
+    border-radius: 16px;
+    border: 1px solid rgba(251, 181, 99, 0.2);
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+    padding: 30px;
+}
+
+.gallery-title {
+    background-color: rgba(41, 206, 246, 0.05);
+}
+
+.single-gallery h3 {
+    color: rgb(19, 19, 24);
+    font-size: 1.50rem;
+    font-weight: 800;
+}
+
+/* header section */
+.banner-img {
+    width: 45%;
+}
+
+/* news styles */
+.news-container {
+    max-width: 1100px;
+    margin: 0 auto;
+    margin-top: 50px;
+    border: 2px solid tomato;
+    display: flex;
+    justify-content: space-between;
+}
+
+.newsletter-title {
+    width: 50%;
+    border: 2px solid yellow;
+}
+
+.newsletter-title h4 {
+    color: rgb(19, 19, 24);
+    font-size: 1.50rem;
+    font-weight: 800;
+    margin-top: 10px;
+    padding-left: 10px;
+}
+
+.newsletter-title p {
+    color: rgb(90, 90, 93);
+    font-size: 1rem;
+    font-weight: 400;
+    margin-top: 10px;
+    padding-left: 10px;
+}
+
+.input-btn-1 {
+    border-radius: 8px;
+    background: rgba(19, 19, 24, 0.05);
+
+
+}
+
+.img-content img {
+    width: 100%;
+    border: 2px solid aquamarine;
+}
