--- a/styles/styles.css
+++ b/styles/styles.css
@@ -178,6 +178,35 @@ body {
     display: flex;
     gap: 20px;
     margin: 20px;
+    position: relative;
+}
+
+.section-nam {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(255, 255, 255);
+    font-size: 1.50rem;
+    font-weight: 800;
+    position: absolute;
+    bottom: 48%;
+    margin-left: 17%;
+}
+
+.container-nam{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(255, 255, 255);
+    font-size: 1.50rem;
+    font-weight: 800;
+    position: absolute;
+    bottom: 48%;
+    margin-left: 10%;
+}
+
+.container-4{
+    margin-left: 6.50%;
 }
 
 .row>div {
@@ -225,44 +254,108 @@ body {
 }
 
 /* news styles */
-.news-container {
+.main-letter {
     max-width: 1100px;
     margin: 0 auto;
-    margin-top: 50px;
-    border: 2px solid tomato;
+    margin-top: 70px;
     display: flex;
     justify-content: space-between;
 }
 
-.newsletter-title {
-    width: 50%;
-    border: 2px solid yellow;
-}
-
-.newsletter-title h4 {
+.hotel-title {
     color: rgb(19, 19, 24);
     font-size: 1.50rem;
     font-weight: 800;
-    margin-top: 10px;
-    padding-left: 10px;
+    margin-top: 25px;
 }
 
-.newsletter-title p {
+.hotel-description {
     color: rgb(90, 90, 93);
-    font-size: 1rem;
+    font-size: 16px;
     font-weight: 400;
-    margin-top: 10px;
-    padding-left: 10px;
+    margin-top: 25px;
 }
 
-.input-btn-1 {
+.first-form {
     border-radius: 8px;
     background: rgba(19, 19, 24, 0.05);
+    padding: 15px 100px;
+    margin-top: 25px;
+}
 
+.second-form {
+    border-radius: 8px;
+    background: rgba(19, 19, 24, 0.05);
+    padding: 15px 100px;
+    margin-top: 25px;
+}
+
+.third {
+    border-radius: 8px;
+    background: rgb(255, 84, 0);
+    padding: 15px 150px;
+    margin-top: 25px;
+}
+
+
+
+/* footer section */
+.footer-section {
+    max-width: 1100px;
+    margin: 0 auto;
+    min-height: 400px;
+    margin-top: 50px;
+    background: rgba(19, 19, 24, 0.05);
 
 }
 
-.img-content img {
-    width: 100%;
-    border: 2px solid aquamarine;
+.footer-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-title h3 {
+    margin-left: 10px;
+    font-size: 2rem;
+    font-weight: 800;
+    margin-top: 80px;
+}
+
+.footer-title img {
+    margin-top: 80px;
+}
+
+.footer-description p {
+    text-align: center;
+    margin-top: 15px;
+    color: rgb(90, 90, 93);
+    font-size: 16px;
+    font-weight: 400;
+    margin-top: 30px;
+}
+
+.footer-icon {
+    text-align: center;
+    margin-top: 30px;
+}
+
+.icon {
+    padding: 10px;
+}
+
+hr {
+    border: 1px solid rgba(19, 19, 24, 0.1);
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 30px;
+}
+
+.footer-description h4 {
+    text-align: center;
+    margin-top: 30px;
+    font-size: 1rem;
+    font-weight: 300;
+    color: rgb(19, 19, 24);
+
 }
