--- a/styles/styles.css
+++ b/styles/styles.css
@@ -88,6 +88,45 @@ body {
     padding-top: 15px;
 }
 
+.banner-input {
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    position: relative;
+}
+
+.banner-input input {
+    padding: 15px 20px;
+    border-radius: 8px;
+    background: rgb(255, 255, 255);
+    border: none;
+    margin-right: 10px;
+    color: rgba(19, 19, 24, 0.5);
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.input-btn {
+    padding: 15px 60px;
+    border-radius: 8px;
+    background: rgb(255, 84, 0);
+    border: none;
+    color: rgb(255, 255, 255);
+    font-size: 16px;
+    font-weight: 700;
+}
+
+.input-icon img {
+   margin-right: 50px;
+   position: absolute;
+   bottom: 15px;
+   right: 180px;
+    
+}
+
+
+
 /* banner container styles */
 .banner-container {
     max-width: 1100px;
@@ -193,7 +232,7 @@ body {
     margin-left: 17%;
 }
 
-.container-nam{
+.container-nam {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -205,7 +244,7 @@ body {
     margin-left: 10%;
 }
 
-.container-4{
+.container-4 {
     margin-left: 6.50%;
 }
 
